# rust-web-poc

./: .gitignore  Cargo.toml  Readme.md
api/bank/: Cargo.toml  build.rs
api/bank/model/: account.proto  auth.proto  transaction.proto  user.proto
api/bank/src/: main.rs
api/bank/src/services/: account.rs  auth.rs  mod.rs  transaction.rs  user.rs
api/idgen/: Cargo.toml  build.rs
api/idgen/model/: idgen.proto
api/idgen/src/: log_layer.rs  main.rs  service.rs
lib/data/: Cargo.toml
lib/data/src/: lib.rs
lib/snowflake/: Cargo.toml
lib/snowflake/src/: generator.rs  lib.rs  structure.rs
