[package]
name = "idgen-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"
futures-core = "0.3.21"
tower = "0.4.12"

snowflake = { path = "../../lib/snowflake" }

[build-dependencies]
tonic-build = "0.7.2"